--- a/public/contact-us.html
+++ b/public/contact-us.html
@@ -25,11 +25,9 @@
     =========================  -->
     <section class="google-map py-0">
       <iframe frameborder="0" height="500" width="100%"
-        src="https://maps.google.com/maps?q=Suite%20100%20San%20Francisco%2C%20LA%2094107%20United%20States&amp;t=m&amp;z=10&amp;output=embed&amp;iwloc=near"></iframe>
-       <!-- <iframe frameborder="0" height="500" width="100%"
-        src="https://www.google.com/maps/place/Gardenia+Medical+Center+-+%D9%85%D8%B1%D9%83%D8%B2+%D8%BA%D8%A7%D8%B1%D8%AF%D9%8A%D9%86%D9%8A%D8%A7+%D8%A7%D9%84%D8%B7%D8%A8%D9%8A%E2%80%AD/@25.3341105,51.4751318,17z/data=!3m1!4b1!4m6!3m5!1s0x3e45ddc5c4665c5f:0xc1b652ab7d4cba8b!8m2!3d25.3341105!4d51.4751318!16s%2Fg%2F11hj01vvf0?entry=ttu&g_ep=EgoyMDI1MDIwMy4wIKXMDSoASAFQAw%3D%3D"></iframe>
-    -->
-    </section><!-- /.GoogleMap -->
+        src="https://maps.google.com/maps?q=25.3341105,51.4751318&amp;t=m&amp;z=15&amp;output=embed&amp;iwloc=near"></iframe>
+
+    </section>
 
     <!-- ==========================
         contact layout 1
@@ -54,28 +52,12 @@
                         required>
                     </div>
                   </div><!-- /.col-lg-6 -->
-                  <div class="col-sm-6 col-md-6 col-lg-6">
-                    <div class="form-group">
-                      <i class="icon-email form-group-icon"></i>
-                      <input type="email" class="form-control" placeholder="البريد الإلكتروني" id="contact-email"
-                        name="contact-email" required>
-                    </div>
-                  </div><!-- /.col-lg-6 -->
+                 
                   <div class="col-sm-6 col-md-6 col-lg-6">
                     <div class="form-group">
                       <i class="icon-phone form-group-icon"></i>
                       <input type="text" class="form-control" placeholder="رقم الهاتف" id="contact-Phone"
                         name="contact-phone" required>
-                    </div>
-                  </div><!-- /.col-lg-6 -->
-                  <div class="col-sm-6 col-md-6 col-lg-6">
-                    <div class="form-group">
-                      <i class="icon-news form-group-icon"></i>
-                      <select class="form-control">
-                        <option value="0">Subject</option>
-                        <option value="1">Subject 1</option>
-                        <option value="2">Subject 1</option>
-                      </select>
                     </div>
                   </div><!-- /.col-lg-6 -->
                   <div class="col-12">
