--- a/public/services-plastic.html
+++ b/public/services-plastic.html
@@ -30,8 +30,8 @@
             <div class="pagetitle__icon">
               <i class="icon-microscope"></i>
             </div>
-            <h1 class="pagetitle__heading" data-lang="services_title_cosmetic">جراحة التجميل والترميم</h1>
-            <p class="pagetitle__desc mb-30" data-lang="services_sub_heading_cosmetic">يقدم الجراحون ذو الخبرة والكفاءة العالية لدى مجمع غاردينيا الطبي عمليات الجراحة التجميلية واليد على أعلى مستوى وبنسبة نجاح كبير باستخدام أحدث التقنيات لتجميل الجسم وشفط الدهون مثل Vaser و J Plasmaو BodyTite.
+            <h1 class="pagetitle__heading" data-lang="services_title_plastic">جراحة التجميل والترميم</h1>
+            <p class="pagetitle__desc mb-30" data-lang="services_sub_heading_plastic">يقدم الجراحون ذو الخبرة والكفاءة العالية لدى مجمع غاردينيا الطبي عمليات الجراحة التجميلية واليد على أعلى مستوى وبنسبة نجاح كبير باستخدام أحدث التقنيات لتجميل الجسم وشفط الدهون مثل Vaser و J Plasmaو BodyTite.
             </p>
             <a href="#content" class="scroll-down"><i class="fas fa-long-arrow-alt-down"></i></a>
           </div><!-- /.col-xl-8 -->
@@ -53,8 +53,8 @@
                   </div>
                 </a>
               </div><!-- /.video-banner -->
-              <p class="text-block__desc mb-20" data-lang="services_text1_cosmetic">في جراحة التجميل والترميم، يعمل الأطباء جنبًا إلى جنب مع فرق طبية متخصصة من أطباء، ممرضين، وأخصائيين في مجالات مختلفة مثل جراحات التجميل، جراحات الترميم، وأطباء الجلد.</p>
-              <p class="text-block__desc mb-20" data-lang="services_text2_cosmetic"> نقدم رعاية شاملة تبدأ من التشخيص الأول للمشاكل الجمالية والترميمية، مرورًا بعلاج الحالات المختلفة مثل التشوهات، الحروق، والإصابات، وحتى المتابعة المستمرة للحفاظ على مظهر الجسم ووظائفه.</p>
+              <p class="text-block__desc mb-20" data-lang="services_text1_plastic">في جراحة التجميل والترميم، يعمل الأطباء جنبًا إلى جنب مع فرق طبية متخصصة من أطباء، ممرضين، وأخصائيين في مجالات مختلفة مثل جراحات التجميل، جراحات الترميم، وأطباء الجلد.</p>
+              <p class="text-block__desc mb-20" data-lang="services_text2_plastic"> نقدم رعاية شاملة تبدأ من التشخيص الأول للمشاكل الجمالية والترميمية، مرورًا بعلاج الحالات المختلفة مثل التشوهات، الحروق، والإصابات، وحتى المتابعة المستمرة للحفاظ على مظهر الجسم ووظائفه.</p>
             </div><!-- /.text-block -->
 
             <ul class="list-items list-unstyled mb-60 pl-40">
@@ -137,7 +137,7 @@
                   <ul class="list-unstyled mb-0">
                     <li><a href="services-family_medicine.html" data-lang= "services_title_family_medicine"><span>طب الأسرة</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-orthopedic_surgery.html" data-lang="services_title_orthopedic_surgery"><span> جراحة العظام</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-cosmetic.html" data-lang="services_title_cosmetic"><span>جراحة التجميل والترميم</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-plastic.html" data-lang="services_title_plastic"><span>جراحة التجميل والترميم</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-hand_surgery.html" data-lang="services_title_hand_surgery"><span> جراحة اليد</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-day_surgery.html" data-lang="services_title_surgery"><span>الجراحة في نفس اليوم</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-anesthesia.html" data-lang="services_title_anesthesia"><span>التخدير </span><i class="icon-arrow-right"></i></a></li>
