--- a/public/blog-single-post.html
+++ b/public/blog-single-post.html
@@ -216,7 +216,7 @@
                   <ul class="list-unstyled mb-0">
                     <li><a href="services-family_medicine.html" data-lang="services_title_family_medicine"> طب الأسرة</a></li>
                     <li><a href="services-orthopedic_surgery.html" data-lang="services_title_orthopedic_surgery"> جراحة العظام</a></li>
-                    <li><a href="services-cosmetic.html" data-lang="services_title_cosmetic"> جراحة التجميل والترميم</a></li>
+                    <li><a href="services-plastic.html" data-lang="services_title_plastic"> جراحة التجميل والترميم</a></li>
                     <li><a href="services-hand_surgery.html" data-lang="services_title_hand_surgery"> جراحة اليد</a></li>
                     <li><a href="services-internal_medicine.html" data-lang="services_title_internal_medicine"> الطب الباطني</a></li>
                     <li><a href="services-dermatology.html" data-lang="services_title_dermatology"> الجلدية والليزر </a></li>
