--- a/public/index.html
+++ b/public/index.html
@@ -394,11 +394,11 @@
         <!-- /.container -->
       </section>
 
-      <section class="testimonials-layout1 pt-130 pb-80">
+      <section class="testimonials-layout1 pt-170 pb-80">
         <div class="container">
           <div class="testimonials-wrapper">
             <div class="row">
-              <div class="col-sm-12 col-md-4  ">
+              <div class="col-sm-12 col-md-4">
                 <div class="testimonials__rating">
                   <div
                     class="testimonials__rating-inner d-flex align-items-center"
@@ -409,22 +409,17 @@
                     </div>
                   </div>
                 </div>
-            
               </div>
-              <div class="col-sm-12 col-md-4  ">
-                <div
-                  class="testimonials__rating d-flex align-items-center"
-                >
+              <div class="col-sm-12 col-md-4">
+                <div class="testimonials__rating d-flex align-items-center">
                   <span class="total__rate">+800</span>
                   <div>
                     <span class="overall__rate">Complete Surgery</span>
                   </div>
                 </div>
               </div>
-              <div class="col-sm-12 col-md-4  ">
-                <div
-                  class="testimonials__rating d-flex align-items-center"
-                >
+              <div class="col-sm-12 col-md-4">
+                <div class="testimonials__rating d-flex align-items-center">
                   <span class="total__rate">+15</span>
                   <div>
                     <span class="overall__rate">Experience Doctors</span>
@@ -448,7 +443,6 @@
         Notses
     =========================== -->
 
-   
       <!-- /.notes -->
 
       <!-- ======================
@@ -1451,6 +1445,7 @@
       Footer
     ========================== -->
       <footer class="footer"></footer>
+    
       <!-- /.Footer -->
       <button id="scrollTopBtn">
         <i class="fas fa-long-arrow-alt-up"></i>
